<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MireaProject</string>
    <string name="nav_header_subtitle">ulanovsky@yandex.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="default_fragments">Default fragments</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="practice_3">Practice 3</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_calculator">Calculator</string>
    <string name="calculator_hint">Input your expression here</string>
    <string name="error_text">Error</string>

    <string name="practice_4">Practice 4</string>
    <string name="menu_player">Player</string>
    <string name="button_play">Play</string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>
    <string name="player_image_desc">Player note image</string>

    <string name="practice_5">Practice 5</string>
    <string name="menu_sensor">Sensors</string>
    <string name="azimuth_label">Azimuth</string>
    <string name="pitch_label">Pitch</string>
    <string name="roll_label">Roll</string>
    <string name="menu_voice_recorder">Voice Recorder</string>
    <string name="button_rec">Rec</string>
    <string name="recorder_image_desc">Recorder mic image</string>
    <string name="menu_camera">Camera</string>
    <string name="take_photo">Take photo</string>

    <string name="practice_6">Practice 6</string>
    <string name="menu_settings">Settings</string>
    <string name="full_name_hint">ФИО</string>
    <string name="university_hint">Название университета</string>
    <string name="button_back">Back</string>
    <string name="button_load">Load</string>
    <string name="button_save">Save</string>
    <string name="menu_stories">Stories</string>
    <string name="fab_desc">Go to story composing</string>
    <string name="menu_new_story">Compose a new story</string>
    <string name="new_story_hint">Write your story here…</string>
</resources>