<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item android:title="@string/default_fragments">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_home"
                        android:icon="@drawable/ic_menu_home"
                        android:title="@string/menu_home" />
                    <item
                        android:id="@+id/nav_gallery"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_gallery" />
                    <item
                        android:id="@+id/nav_slideshow"
                        android:icon="@drawable/ic_menu_slideshow"
                        android:title="@string/menu_slideshow" />
                </group>
            </menu>
        </item>

        <item android:title="@string/practice_3">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_browser"
                        android:icon="@drawable/ic_menu_browser"
                        android:title="@string/menu_browser" />
                    <item
                        android:id="@+id/nav_calculator"
                        android:icon="@drawable/ic_menu_calculator"
                        android:title="@string/menu_calculator" />
                </group>
            </menu>
        </item>

        <item android:title="@string/practice_4">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_player"
                        android:icon="@drawable/ic_menu_player"
                        android:title="@string/menu_player" />
                </group>
            </menu>
        </item>

        <item android:title="@string/practice_5">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_sensor"
                        android:icon="@drawable/ic_menu_sensor"
                        android:title="@string/menu_sensor" />
                    <item
                        android:id="@+id/nav_voice_recorder"
                        android:icon="@drawable/ic_menu_voice_recorder"
                        android:title="@string/menu_voice_recorder" />
                    <item
                        android:id="@+id/nav_camera"
                        android:icon="@drawable/ic_menu_camera"
                        android:title="@string/menu_camera" />
                </group>
            </menu>
        </item>

        <item android:title="@string/practice_6">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_stories"
                        android:icon="@drawable/ic_menu_stories"
                        android:title="@string/menu_stories" />
                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_menu_settings"
                        android:title="@string/menu_settings" />
                </group>
            </menu>
        </item>
    </group>

</menu>